CLAUDE.md: 内容を圧縮・再構成 (約 1100 行 → 約 300 行) (#24)
肥大化していた CLAUDE.md を整理:
- 冒頭の指示を `# 指示` セクションに集約 (Co-Authored-By 除外 /
  ディスク不足時は /mnt/d/gitwork)
- Phase 0〜34 の詳細作業記録を要点のみに圧縮
- 「累計バグ修正・実装の傾向」を socket/DNS / Windows filesystem /
  デバッグ env の 3 セクションに再編
- 現状サマリの冗長な見出しを箇条書きに統合

166 insertions / 972 deletions。内容の事実関係は維持、冗長な記述と
古い phase の細目を削減してコンテキスト効率を改善。